changed margin-left to padding-left.  Fixed card when in dark mode. (#7059)

--- a/docs/src/_static/theme_override.css
+++ b/docs/src/_static/theme_override.css
@@ -44,7 +44,7 @@ ul.squarelist {
 
 .custom-body {
     text-align: left;
-    margin-left: max(45px, 15%);
+    padding-left:  max(45px, 20%) !important;
 }
 
 .center {
